# Ghost-Robot

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md
docs/: ISAAC_SIM_SETUP.md  QUICK_START.md
examples/: USAGE_EXAMPLES.md
ghost_follower/: CMakeLists.txt  package.xml
ghost_follower/config/: ghost_publisher_params.yaml
ghost_follower/launch/: ghost_publisher.launch.py  ghost_publisher_with_params.launch.py
ghost_follower/src/: ghost_publisher.cpp
scripts/: README.md  validate_trajectory.py
